--- a/BusStopFinder.cabal
+++ b/BusStopFinder.cabal
@@ -20,6 +20,11 @@ executable BusStopFinder
   main-is:             Main.hs
   -- other-modules:       
   other-extensions:    OverloadedStrings
-  build-depends:       base >=4.10 && <4.11, bytestring >=0.10 && <0.11, HTTP
+  build-depends:       
+    base >=4.8 && <4.11, 
+    bytestring >=0.10 && <0.11, 
+    HTTP,
+    network-uri,
+    aeson
   -- hs-source-dirs:      
   default-language:    Haskell2010
