--- a/BusStopFinder.cabal
+++ b/BusStopFinder.cabal
@@ -22,7 +22,9 @@ executable BusStopFinder
   other-extensions:    OverloadedStrings
   build-depends:       
     base >=4.8 && <4.11, 
+    text,
     bytestring >=0.10 && <0.11, 
+    http-conduit,
     HTTP,
     network-uri,
     aeson
